fixed image paths

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-lg-4">
-                <img src="./img/iyi-backend-gelistirici.png"
+                <img src="https://miro.medium.com/max/1400/1*UGNHaNmXDHD0w8pMCqUzWA.png"
                   class="img-fluid rounded" alt="İyi Bir Backend Geliştirici Olmak İçin Yol Haritası">
               </div>
               <div class="col">
@@ -104,7 +104,7 @@
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-lg-4">
-                <img src="./img/Kotlin-ile-backend.png" class="img-fluid rounded"
+                <img src="./img/kotlin-ile-backend.png" class="img-fluid rounded"
                   alt="...">
               </div>
               <div class="col">
@@ -125,7 +125,7 @@
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-lg-4">
-                <img src="./img/circuit-breaker-pattern.png"
+                <img src="https://miro.medium.com/max/1400/1*7QAQqGKs-IloypsZm77ofg.png"
                   class="img-fluid rounded" alt="...">
               </div>
               <div class="col">
