--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="card mb-3 border-0">
             <div class="row g-0">
               <div class="col-lg-4">
-                <img src="./img/kotlin-ile-backend.png" class="img-fluid rounded"
+                <img src="https://miro.medium.com/max/1400/1*bCGE3OGVFllCrsgNhikTeA.png" class="img-fluid rounded"
                   alt="...">
               </div>
               <div class="col">
