--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="d-flex justify-content-center mt-2 ml-1">
               <a href="https://gokhana.medium.com/" target="_blank" class="fab fa-medium-m"></a>
               <a href="https://www.linkedin.com/in/gokhan-a/" class="fab fa-linkedin-in" target="_blank"></a>
-              <a href="https://twitter.com/g_khana" class="fab fa-twitter" target="_blank"></a>
+              <a href="https://twitter.com/gokhanadev" class="fab fa-twitter" target="_blank"></a>
               <a href="https://github.com/G-khan" class="fab fa-github" target="_blank"></a>
             </div>
           </div>
